# BeeCuriousService

./: .env.example  .gitignore  README.md  pyproject.toml
src/beecurious_service/: __init__.py  __main__.py  config.py  models.py  prompts.py  providers.py  server.py  sessions.py  telemetry.py
src/beecurious_service/agents/: __init__.py  base.py  registry.py
src/beecurious_service/agents/bip_v1/: __init__.py  profile.py  prompts.py
src/beecurious_service/agents/bip_v2/: __init__.py  profile.py  prompts.py
src/beecurious_service/agents/bip_v3/: __init__.py  profile.py
src/beecurious_service/agents/bip_v4/: __init__.py  profile.py  prompts.py
tests/: test_agent_profiles.py  test_config.py  test_models.py  test_providers.py  test_server.py  test_sessions.py  test_telemetry.py
